--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <html>
-
+  <header>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="dashboard.js"></script>
-<body>
-
-    <h1>A D3.js Dashboard</h1>
-
+  </header>
+  <body>
+    <h1>A Simple D3 Dashboard</h1>
     <div id="metrics"></div>
-
-
-
-</body>
+  </body>
 </html>
